--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=TimeLane
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:file:./timelane_storage/demo
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2 Console Configuration
+spring.h2.console.enabled=true
+# Console path -> http://localhost:8080/h2-console
+
+# JPA and Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.datasource.initialization-mode=always
